# triggers-api

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  railway.json  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
src/: chat.py  config.py  database.py  delivery.py  main.py  models.py
src/routes/: chat.py  events.py  inbox.py  subscriptions.py
static/: api_reference.html  chat_widget.js  dashboard.html  explorer.html  settings.html  subscriptions.html  theme.js
tests/: conftest.py  test_chat.py  test_database.py  test_events.py  test_inbox.py  test_stats.py  test_subscriptions.py
